--- a/src/client/template/index.html
+++ b/src/client/template/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="UTF-8">
-		<title>simaas</title>
+		<title>spansh-r2r-saver</title>
 	</head>
 	<body>
 		<script src="bundle.js"></script>
